feat: add QuestDB 10.0.1 for all platforms
Adds the 10.0 line (upstream patch of 10.0.0, published 2026-08-24). Official -rt- archives for linux-x64/win32-x64, no-JRE archive + bundled Temurin JRE 25 elsewhere. Launcher flags verified identical to 9.4.x and JRE-25-compatible. New '10' defaults entry resolves to 10.0.1; the 9 line is unchanged (9.4.3 default for '9'). Minor bump per the defaults-block policy.